Fixed horizontal overflow

--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,5 @@
     margin: 0;
     padding: 0;
     width: 100%;
+    overflow-x: hidden;
   }
